src/lib/amipack_parse.c
/* Generated by re2c 1.0.2 */
#line 1 "src/lib/amipack_parse.re"
/**
 * amiws -- Library with functions for read/create AMI packets
 * Copyright (C) 2016, Stas Kobzar <staskobzar@modulis.ca>
 *
 * This file is part of amiws.
 *
 * amiws is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * amiws is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with amiws.  If not, see <http://www.gnu.org/licenses/>.
 */

/**
 * @file amipack_parse.c
 * @brief AMI (Asterisk Management Interface) packet parser.
 *
 * @author Stas Kobzar <stas.kobzar@modulis.ca>
 */

#include <stdio.h>
#include <string.h>
#include "amipack.h"

/**
 * Commands to run when known header parsed.
 * @param name    Header type
 */
#define SET_HEADER(name)  len = cur - tok; \
                          hdr_name = strdup(name); \
                          goto yyc_key;

/**
 * Commands to run on Command AMI response header.
 * @param offset  Header name offset
 * @param name    Header type
 */
#define CMD_HEADER(offset, name) len = cur - tok - offset; tok += offset; \
                          while(*tok == ' ') { tok++; len--; } \
                          len -= 2; \
                          char *val = strndup(tok, len); \
                          amipack_append (pack, strdup(name), strlen(name), val, len); \
                          tok = cur; goto yyc_command;

// introducing types:re2c for AMI packet
/*! re2c parcing conditions. */
enum yycond_pack {
  yyckey,
  yycvalue,
  yyccommand,
  yycqueue,
  yycqmembers,
  yycqcallers
};

AMIPacket *amiparse_pack (const char *pack_str)
{
  AMIPacket *pack = amipack_init ();
  AMIQueue  *queue = pack->queue;
  const char *marker = pack_str;
  const char *cur    = marker;
  const char *ctxmarker;
  int c = yyckey;
  int len = 0;

  const char *yyt1;
const char *yyt2;
const char *yyt3;


  const char *tok = marker;
  char *hdr_name = NULL;
  // stags
  const char *tq1, *tq2, *tq3, *tq4, *tq5, *tq6;


#line 87 "src/lib/amipack_parse.c"
{
	unsigned char yych;
	unsigned int yyaccept = 0;
	switch (c) {
	case yyckey: goto yyc_key;
	case yycvalue: goto yyc_value;
	case yyccommand: goto yyc_command;
	case yycqueue: goto yyc_queue;
	case yycqmembers: goto yyc_qmembers;
	case yycqcallers: goto yyc_qcallers;
	}
/* *********************************** */
yyc_key:
	yych = *cur;
	switch (yych) {
	case '\r':
		yyt1 = cur;
		goto yy6;
	case ' ':	goto yy7;
	case ':':
		yyt1 = cur;
		goto yy9;
	case 'A':
	case 'a':
		yyt1 = cur;
		goto yy11;
	case 'E':
	case 'e':
		yyt1 = cur;
		goto yy12;
	case 'R':
	case 'r':
		yyt1 = cur;
		goto yy13;
	default:
		yyt1 = cur;
		goto yy3;
	}
yy3:
	yyaccept = 0;
	yych = *(marker = ++cur);
yy4:
	switch (yych) {
	case ' ':	goto yy14;
	case ':':	goto yy16;
	default:	goto yy3;
	}
yy5:
#line 151 "src/lib/amipack_parse.re"
	{
              len = cur - tok;
              hdr_name = strndup(tok, len);
              goto yyc_key;
            }
#line 142 "src/lib/amipack_parse.c"
yy6:
	yyaccept = 0;
	yych = *(marker = ++cur);
	switch (yych) {
	case '\n':	goto yy18;
	default:	goto yy4;
	}
yy7:
	++cur;
#line 106 "src/lib/amipack_parse.re"
	{
              //if (hdr_name) free (hdr_name);
              amipack_destroy (pack);
              return NULL;
            }
#line 158 "src/lib/amipack_parse.c"
yy9:
	yyaccept = 1;
	yych = *(marker = ++cur);
	switch (yych) {
	case '\r':	goto yy19;
	case ' ':	goto yy20;
	default:	goto yy16;
	}
yy10:
#line 120 "src/lib/amipack_parse.re"
	{ tok = cur; goto yyc_value; }
#line 170 "src/lib/amipack_parse.c"
yy11:
	yyaccept = 0;
	yych = *(marker = ++cur);
	switch (yych) {
	case 'C':
	case 'c':	goto yy21;
	default:	goto yy4;
	}
yy12:
	yyaccept = 0;
	yych = *(marker = ++cur);
	switch (yych) {
	case 'V':
	case 'v':	goto yy22;
	default:	goto yy4;
	}
yy13:
	yyaccept = 0;
	yych = *(marker = ++cur);
	switch (yych) {
	case 'E':
	case 'e':	goto yy23;
	default:	goto yy4;
	}
yy14:
	yych = *++cur;
	switch (yych) {
	case 'h':	goto yy24;
	default:	goto yy15;
	}
yy15:
	cur = marker;
	switch (yyaccept) {
	case 0: 	goto yy5;
	case 1: 	goto yy10;
	case 2: 	goto yy35;
	case 3: 	goto yy38;
	case 4: 	goto yy45;
	case 5: 	goto yy50;
	case 6: 	goto yy55;
	case 7: 	goto yy62;
	default:	goto yy94;
	}
yy16:
	yych = *++cur;
yy17:
	switch (yych) {
	case ' ':	goto yy14;
	default:	goto yy16;
	}
yy18:
	yyaccept = 0;
	yych = *(marker = ++cur);
	switch (yych) {
	case '\r':	goto yy25;
	default:	goto yy4;
	}
yy19:
	yych = *++cur;
	switch (yych) {
	case '\n':	goto yy26;
	default:	goto yy17;
	}
yy20:
	yyaccept = 1;
	yych = *(marker = ++cur);
	switch (yych) {
	case 'h':	goto yy24;
	default:	goto yy29;
	}
yy21:
	yyaccept = 0;
	yych = *(marker = ++cur);
	switch (yych) {
	case 'T':
	case 't':	goto yy30;
	default:	goto yy4;
	}
yy22:
	yyaccept = 0;
	yych = *(marker = ++cur);
	switch (yych) {
	case 'E':
	case 'e':	goto yy31;
	default:	goto yy4;
	}
yy23:
	yyaccept = 0;
	yych = *(marker = ++cur);
	switch (yych) {
	case 'S':
	case 's':	goto yy32;
	default:	goto yy4;
	}
yy24:
	yych = *++cur;
	switch (yych) {
	case 'a':	goto yy33;
	default:	goto yy15;
	}
yy25:
	yyaccept = 0;
	yych = *(marker = ++cur);
	switch (yych) {
	case '\n':	goto yy34;
	default:	goto yy4;
	}
yy26:
	yych = *++cur;
	switch (yych) {
	case '\r':	goto yy36;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy37;
	default:	goto yy17;
	}
yy27:
	yych = *++cur;
	switch (yych) {
	case '\n':	goto yy39;
	default:	goto yy15;
	}
yy28:
	yyaccept = 1;
	yych = *(marker = ++cur);
yy29:
	switch (yych) {
	case '\r':	goto yy27;
	case ' ':	goto yy28;
	default:	goto yy10;
	}
yy30:
	yyaccept = 0;
	yych = *(marker = ++cur);
	switch (yych) {
	case 'I':
	case 'i':	goto yy40;
	default:	goto yy4;
	}
yy31:
	yyaccept = 0;
	yych = *(marker = ++cur);
	switch (yych) {
	case 'N':
	case 'n':	goto yy41;
	default:	goto yy4;
	}
yy32:
	yyaccept = 0;
	yych = *(marker = ++cur);
	switch (yych) {
	case 'P':
	case 'p':	goto yy42;
	default:	goto yy4;
	}
yy33:
	yych = *++cur;
	switch (yych) {
	case 's':	goto yy43;
	default:	goto yy15;
	}
yy34:
	yyaccept = 2;
	yych = *(marker = ++cur);
	goto yy4;
yy35:
#line 111 "src/lib/amipack_parse.re"
	{ goto done; }
#line 388 "src/lib/amipack_parse.c"
yy36:
	yych = *++cur;
	switch (yych) {
	case '\n':	goto yy44;
	default:	goto yy17;
	}
yy37:
	yyaccept = 3;
	yych = *(marker = ++cur);
	goto yy17;
yy38:
	cur -= 1;
#line 121 "src/lib/amipack_parse.re"
	{
              tok = cur;
              amipack_append(pack, hdr_name, strlen(hdr_name), strdup(""), 0);
              goto yyc_key;
            }
#line 407 "src/lib/amipack_parse.c"
yy39:
	yych = *++cur;
	switch (yych) {
	case '\r':	goto yy46;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy47;
	default:	goto yy15;
	}
yy40:
	yyaccept = 0;
	yych = *(marker = ++cur);
	switch (yych) {
	case 'O':
	case 'o':	goto yy48;
	default:	goto yy4;
	}
yy41:
	yyaccept = 0;
	yych = *(marker = ++cur);
	switch (yych) {
	case 'T':
	case 't':	goto yy49;
	default:	goto yy4;
	}
yy42:
	yyaccept = 0;
	yych = *(marker = ++cur);
	switch (yych) {
	case 'O':
	case 'o':	goto yy51;
	default:	goto yy4;
	}
yy43:
	yych = *++cur;
	switch (yych) {
	case ' ':	goto yy52;
	default:	goto yy15;
	}
yy44:
	yyaccept = 4;
	yych = *(marker = ++cur);
	goto yy17;
yy45:
#line 126 "src/lib/amipack_parse.re"
	{
              tok = cur;
              amipack_append(pack, hdr_name, strlen(hdr_name), strdup(""), 0);
              goto done;
            }
#line 507 "src/lib/amipack_parse.c"
yy46:
	yych = *++cur;
	switch (yych) {
	case '\n':	goto yy53;
	default:	goto yy15;
	}
yy47:
	++cur;
	goto yy38;
yy48:
	yyaccept = 0;
	yych = *(marker = ++cur);
	switch (yych) {
	case 'N':
	case 'n':	goto yy54;
	default:	goto yy4;
	}
yy49:
	yyaccept = 5;
	yych = *(marker = ++cur);
	goto yy4;
yy50:
#line 146 "src/lib/amipack_parse.re"
	{
              amipack_type (pack, AMI_EVENT);
              SET_HEADER("Event");
            }
#line 535 "src/lib/amipack_parse.c"
yy51:
	yyaccept = 0;
	yych = *(marker = ++cur);
	switch (yych) {
	case 'N':
	case 'n':	goto yy56;
	default:	goto yy4;
	}
yy52:
	yych = *++cur;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
		yyt2 = cur;
		goto yy57;
	default:	goto yy15;
	}
yy53:
	++cur;
	goto yy45;
yy54:
	yyaccept = 6;
	yych = *(marker = ++cur);
	goto yy4;
yy55:
#line 142 "src/lib/amipack_parse.re"
	{
              amipack_type (pack, AMI_ACTION);
              SET_HEADER("Action");
            }
#line 574 "src/lib/amipack_parse.c"
yy56:
	yyaccept = 0;
	yych = *(marker = ++cur);
	switch (yych) {
	case 'S':
	case 's':	goto yy59;
	default:	goto yy4;
	}
yy57:
	yych = *++cur;
	switch (yych) {
	case ' ':	goto yy60;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy57;
	default:	goto yy15;
	}
yy59:
	yyaccept = 0;
	yych = *(marker = ++cur);
	switch (yych) {
	case 'E':
	case 'e':	goto yy61;
	default:	goto yy4;
	}
yy60:
	yych = *++cur;
	switch (yych) {
	case 'c':	goto yy63;
	default:	goto yy15;
	}
yy61:
	yyaccept = 7;
	yych = *(marker = ++cur);
	switch (yych) {
	case ':':	goto yy64;
	default:	goto yy4;
	}
yy62:
#line 138 "src/lib/amipack_parse.re"
	{
              amipack_type (pack, AMI_RESPONSE);
              SET_HEADER("Response");
            }
#line 626 "src/lib/amipack_parse.c"
yy63:
	yych = *++cur;
	switch (yych) {
	case 'a':	goto yy65;
	default:	goto yy15;
	}
yy64:
	yych = *++cur;
	switch (yych) {
	case ' ':	goto yy66;
	case 'F':
	case 'f':	goto yy67;
	default:	goto yy16;
	}
yy65:
	yych = *++cur;
	switch (yych) {
	case 'l':	goto yy68;
	default:	goto yy15;
	}
yy66:
	yych = *++cur;
	switch (yych) {
	case 'h':	goto yy24;
	default:	goto yy70;
	}
yy67:
	yych = *++cur;
	switch (yych) {
	case 'O':
	case 'o':	goto yy72;
	default:	goto yy17;
	}
yy68:
	yych = *++cur;
	switch (yych) {
	case 'l':	goto yy73;
	default:	goto yy15;
	}
yy69:
	yych = *++cur;
yy70:
	switch (yych) {
	case ' ':	goto yy69;
	case 'F':
	case 'f':	goto yy71;
	default:	goto yy15;
	}
yy71:
	yych = *++cur;
	switch (yych) {
	case 'O':
	case 'o':	goto yy74;
	default:	goto yy15;
	}
yy72:
	yych = *++cur;
	switch (yych) {
	case 'L':
	case 'l':	goto yy75;
	default:	goto yy17;
	}
yy73:
	yych = *++cur;
	switch (yych) {
	case 's':	goto yy76;
	default:	goto yy15;
	}
yy74:
	yych = *++cur;
	switch (yych) {
	case 'L':
	case 'l':	goto yy77;
	default:	goto yy15;
	}
yy75:
	yych = *++cur;
	switch (yych) {
	case 'L':
	case 'l':	goto yy78;
	default:	goto yy17;
	}
yy76:
	yych = *++cur;
	switch (yych) {
	case ' ':	goto yy79;
	default:	goto yy15;
	}
yy77:
	yych = *++cur;
	switch (yych) {
	case 'L':
	case 'l':	goto yy80;
	default:	goto yy15;
	}
yy78:
	yych = *++cur;
	switch (yych) {
	case 'O':
	case 'o':	goto yy81;
	default:	goto yy17;
	}
yy79:
	yych = *++cur;
	switch (yych) {
	case '(':	goto yy82;
	default:	goto yy15;
	}
yy80:
	yych = *++cur;
	switch (yych) {
	case 'O':
	case 'o':	goto yy83;
	default:	goto yy15;
	}
yy81:
	yych = *++cur;
	switch (yych) {
	case 'W':
	case 'w':	goto yy84;
	default:	goto yy17;
	}
yy82:
	yych = *++cur;
	switch (yych) {
	case 'm':	goto yy85;
	default:	goto yy15;
	}
yy83:
	yych = *++cur;
	switch (yych) {
	case 'W':
	case 'w':	goto yy86;
	default:	goto yy15;
	}
yy84:
	yych = *++cur;
	switch (yych) {
	case 'S':
	case 's':	goto yy87;
	default:	goto yy17;
	}
yy85:
	yych = *++cur;
	switch (yych) {
	case 'a':	goto yy88;
	default:	goto yy15;
	}
yy86:
	yych = *++cur;
	switch (yych) {
	case 'S':
	case 's':	goto yy89;
	default:	goto yy15;
	}
yy87:
	yych = *++cur;
	switch (yych) {
	case '\r':	goto yy90;
	default:	goto yy17;
	}
yy88:
	yych = *++cur;
	switch (yych) {
	case 'x':	goto yy91;
	default:	goto yy15;
	}
yy89:
	yych = *++cur;
	switch (yych) {
	case '\r':	goto yy92;
	default:	goto yy15;
	}
yy90:
	yych = *++cur;
	switch (yych) {
	case '\n':	goto yy93;
	default:	goto yy17;
	}
yy91:
	yych = *++cur;
	switch (yych) {
	case ' ':	goto yy95;
	default:	goto yy15;
	}
yy92:
	yych = *++cur;
	switch (yych) {
	case '\n':	goto yy96;
	default:	goto yy15;
	}
yy93:
	yyaccept = 8;
	yych = *(marker = ++cur);
	goto yy17;
yy94:
#line 131 "src/lib/amipack_parse.re"
	{
              len = cur - tok;
              tok = cur;
              amipack_type (pack, AMI_RESPONSE);
              amipack_append(pack, strdup("Response"), 8, strdup("Follows"), 7);
              goto yyc_command;
            }
#line 831 "src/lib/amipack_parse.c"
yy95:
	yych = *++cur;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
		yyt3 = cur;
		goto yy97;
	default:	goto yy15;
	}
yy96:
	++cur;
	goto yy94;
yy97:
	yych = *++cur;
	switch (yych) {
	case ')':	goto yy99;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy97;
	default:	goto yy15;
	}
yy99:
	yych = *++cur;
	switch (yych) {
	case ' ':	goto yy100;
	default:	goto yy15;
	}
yy100:
	++cur;
	tq1 = yyt1;
	tq3 = yyt2;
	tq5 = yyt3;
	tq2 = yyt2 - 5;
	tq4 = yyt3 - 12;
	tq6 = cur - 2;
#line 113 "src/lib/amipack_parse.re"
	{
              queue->name = strndup(tq1, (int)(tq2 - tq1));
              queue->calls = (int)strtol(tq3, NULL, 10);
              queue->maxlen = (int)strtol(tq5, NULL, 10);
              amipack_type (pack, AMI_QUEUES);
              goto yyc_queue;
            }
#line 942 "src/lib/amipack_parse.c"
/* *********************************** */
yyc_value:
	yych = *cur;
	switch (yych) {
	case '\n':	goto yy107;
	case '\r':	goto yy109;
	default:	goto yy104;
	}
yy104:
	yych = *++cur;
	switch (yych) {
	case '\n':
	case '\r':	goto yy106;
	default:	goto yy104;
	}
yy106:
#line 158 "src/lib/amipack_parse.re"
	{
              len = cur - tok;
              char *val = strndup(tok, len);
              amipack_append(pack, hdr_name, strlen(hdr_name), val, len);
              goto yyc_value;
            }
#line 966 "src/lib/amipack_parse.c"
yy107:
	++cur;
yy108:
#line 106 "src/lib/amipack_parse.re"
	{
              //if (hdr_name) free (hdr_name);
              amipack_destroy (pack);
              return NULL;
            }
#line 976 "src/lib/amipack_parse.c"
yy109:
	yych = *(marker = ++cur);
	switch (yych) {
	case '\n':	goto yy110;
	default:	goto yy108;
	}
yy110:
	yych = *++cur;
	switch (yych) {
	case '\r':	goto yy112;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy113;
	default:	goto yy111;
	}
yy111:
	cur = marker;
	goto yy108;
yy112:
	yych = *++cur;
	switch (yych) {
	case '\n':	goto yy115;
	default:	goto yy111;
	}
yy113:
	++cur;
	cur -= 1;
#line 157 "src/lib/amipack_parse.re"
	{ tok = cur; goto yyc_key; }
#line 1055 "src/lib/amipack_parse.c"
yy115:
	++cur;
#line 111 "src/lib/amipack_parse.re"
	{ goto done; }
#line 1060 "src/lib/amipack_parse.c"
/* *********************************** */
yyc_command:
	yych = *cur;
	switch (yych) {
	case '\n':	goto yy121;
	case '-':	goto yy123;
	case 'A':
	case 'a':	goto yy124;
	case 'M':
	case 'm':	goto yy125;
	case 'P':
	case 'p':	goto yy126;
	default:	goto yy119;
	}
yy119:
	yych = *++cur;
yy120:
	switch (yych) {
	case '\n':	goto yy121;
	default:	goto yy119;
	}
yy121:
	++cur;
yy122:
#line 169 "src/lib/amipack_parse.re"
	{ goto yyc_command; }
#line 1087 "src/lib/amipack_parse.c"
yy123:
	yych = *++cur;
	switch (yych) {
	case '-':	goto yy127;
	default:	goto yy120;
	}
yy124:
	yych = *++cur;
	switch (yych) {
	case 'C':
	case 'c':	goto yy128;
	default:	goto yy120;
	}
yy125:
	yych = *++cur;
	switch (yych) {
	case 'E':
	case 'e':	goto yy129;
	default:	goto yy120;
	}
yy126:
	yych = *++cur;
	switch (yych) {
	case 'R':
	case 'r':	goto yy130;
	default:	goto yy120;
	}
yy127:
	yych = *++cur;
	switch (yych) {
	case 'E':	goto yy131;
	default:	goto yy120;
	}
yy128:
	yych = *++cur;
	switch (yych) {
	case 'T':
	case 't':	goto yy132;
	default:	goto yy120;
	}
yy129:
	yych = *++cur;
	switch (yych) {
	case 'S':
	case 's':	goto yy133;
	default:	goto yy120;
	}
yy130:
	yych = *++cur;
	switch (yych) {
	case 'I':
	case 'i':	goto yy134;
	default:	goto yy120;
	}
yy131:
	yych = *++cur;
	switch (yych) {
	case 'N':	goto yy135;
	default:	goto yy120;
	}
yy132:
	yych = *++cur;
	switch (yych) {
	case 'I':
	case 'i':	goto yy136;
	default:	goto yy120;
	}
yy133:
	yych = *++cur;
	switch (yych) {
	case 'S':
	case 's':	goto yy137;
	default:	goto yy120;
	}
yy134:
	yych = *++cur;
	switch (yych) {
	case 'V':
	case 'v':	goto yy138;
	default:	goto yy120;
	}
yy135:
	yych = *++cur;
	switch (yych) {
	case 'D':	goto yy139;
	default:	goto yy120;
	}
yy136:
	yych = *++cur;
	switch (yych) {
	case 'O':
	case 'o':	goto yy140;
	default:	goto yy120;
	}
yy137:
	yych = *++cur;
	switch (yych) {
	case 'A':
	case 'a':	goto yy141;
	default:	goto yy120;
	}
yy138:
	yych = *++cur;
	switch (yych) {
	case 'I':
	case 'i':	goto yy142;
	default:	goto yy120;
	}
yy139:
	yych = *++cur;
	switch (yych) {
	case ' ':	goto yy143;
	default:	goto yy120;
	}
yy140:
	yych = *++cur;
	switch (yych) {
	case 'N':
	case 'n':	goto yy144;
	default:	goto yy120;
	}
yy141:
	yych = *++cur;
	switch (yych) {
	case 'G':
	case 'g':	goto yy145;
	default:	goto yy120;
	}
yy142:
	yych = *++cur;
	switch (yych) {
	case 'L':
	case 'l':	goto yy146;
	default:	goto yy120;
	}
yy143:
	yych = *++cur;
	switch (yych) {
	case 'C':	goto yy147;
	default:	goto yy120;
	}
yy144:
	yych = *++cur;
	switch (yych) {
	case 'I':
	case 'i':	goto yy148;
	default:	goto yy120;
	}
yy145:
	yych = *++cur;
	switch (yych) {
	case 'E':
	case 'e':	goto yy149;
	default:	goto yy120;
	}
yy146:
	yych = *++cur;
	switch (yych) {
	case 'E':
	case 'e':	goto yy150;
	default:	goto yy120;
	}
yy147:
